--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,3 +209,70 @@ textarea {
     margin-top:10px;
     height:200px;
 }
+
+@media screen and (max-width: 768px) {
+
+    header {
+        position:static;
+        background-color: #ffffff;
+        width:100%;
+        height:100px;
+        border-color:#cccccc;
+        border-bottom-style: solid;
+        border-bottom-width: 1px;
+        z-index:3;
+    }
+
+    #header-container {
+        position:static;
+        margin:auto;
+        width:100%;
+        height:auto;
+        font-family: 'Georgia', Times, Times New Roman, serif;
+    }
+
+    nav {
+        display:block;    
+        position:static;
+        width:100%;
+        font-size:15px;
+        list-style-type:none;
+    }
+    
+    h1 {
+      background-color: #333;
+      width: 100%;
+      display:block;
+      position:static;
+
+    }
+
+    ul {
+        float:none;
+    }
+    
+    li {
+        float:none;
+        padding-top:10px;
+        width:100%;
+        background-color:green;
+        height:30px;
+        display:block;
+        position:static;
+        text-align:center;
+    }
+
+    li a {
+        text-align:center;
+        padding:5px 5px;
+        text-decoration:none;
+        color:#777777;
+        font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    }
+    
+    /* Code for adding division between list items */
+    nav li:not(:first-child):before {
+        content: "";
+    }
+
+   
