--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,7 +214,7 @@ textarea {
 
     header {
         position:static;
-        background-color: #ffffff;
+        background-color: #4aaaa5;
         width:100%;
         height:100px;
         border-color:#cccccc;
@@ -240,7 +240,7 @@ textarea {
     }
     
     h1 {
-      background-color: #333;
+      background-color: #4aaaa5;
       width: 100%;
       display:block;
       position:static;
@@ -255,16 +255,16 @@ textarea {
         float:none;
         padding-top:10px;
         width:100%;
-        background-color:green;
+        background-color:white;
         height:30px;
         display:block;
         position:static;
         text-align:center;
+        border-bottom:1px solid #cccccc;
     }
 
     li a {
         text-align:center;
-        padding:5px 5px;
         text-decoration:none;
         color:#777777;
         font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -275,4 +275,76 @@ textarea {
         content: "";
     }
 
-   
+    section {
+        position:static;
+        width:100%;
+        margin-top:80px;
+        margin-bottom:60px;
+        background-color:#ffffff;
+        border-top: solid 1px #cccccc;
+        border-bottom: solid 1px #cccccc;
+        border-right: none; 
+        border-left: none; 
+
+    }
+    
+    h2 {
+        font-family: 'Georgia', Times, Times New Roman, serif;
+        font-size:20px;
+        font-weight:bold;
+        color:#4aaaa5;
+        padding:20px 0px 20px 0px;
+        border-bottom: solid;
+        border-width: 2px;
+        border-color:#dddddd;
+        margin-bottom: 30px;
+    }
+    
+    /*Container for all information and images contained in the Section*/
+    .section-content {
+        padding-left:20px;
+        padding-right:20px;
+        padding-top:10px;
+        padding-bottom:10px;
+    }
+    
+    p {
+        padding-bottom:10px;
+        line-height:30px;
+    }
+    
+    #image-about {
+        float:left;
+        padding-right:10px;
+        padding-bottom:0px;
+    }
+    
+    footer {
+        background-color:#666666;
+        color:white;
+        font-size:10px;
+        position:static;
+        bottom:0px;
+        width:100%;
+        text-align:center;
+        padding-top:20px;
+        padding-bottom:10px;
+        border-top:solid 5px #4aaaa5;
+    }
+    
+
+}
+
+@media screen and (max-width: 600px) {
+
+#image-about {
+
+    width:100%;
+    float:none;
+    margin-left:20px;
+    margin-right:auto;
+    padding:5px 5px 5px 5px;
+}
+
+
+}
