--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -372,8 +372,41 @@ textarea {
         border-top:solid 5px #4aaaa5;
     }
     
+    /*Contact Page-Specific CSS */
 
+#form-wrapper{
+    padding-left:10px;
+    padding-right:10px;
+}
 
+input[type=text] {
+    padding:5px 20px;
+} 
+
+input[type=submit] {
+    width:100%;
+    background-color: #4aaaa5;
+    padding:14px 20px;
+    margin: 8px 0;
+    border:none;
+    cursor:pointer;
+    color:white;
+
+}
+
+input[type=submit]:hover {
+    background-color: #cf0516;
+}
+
+textarea {
+    width: 100%;
+    padding:12px 20px;
+    border: 1px solid #ccc;
+    box-sizing:border-box;
+    margin-bottom:10px;
+    margin-top:10px;
+    height:200px;
+}
 
 }
 
