Done for the night- all pages are quite responsive.  To be added later:  Extra responsiveness for different size screens, consistency of headers across all pages, clean up css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,7 +325,7 @@ textarea {
     }
     
     #image-about {
-        float:left;
+        float:none;
         padding-right:10px;
         padding-bottom:0px;
     }
@@ -344,6 +344,7 @@ textarea {
     display:inline;
     margin:0 auto;
 }
+
 
 
 /*Creates text box over images*/
